# monobiome

./: .gitignore  DESIGN.md  FIREFOX.md  README.md  THEMES.md  check.sh  generate.sh  pyproject.toml  remove_big_ipynb.py  scheme.toml
app-config/firefox/: alpine-monobiome-dark.xpi  alpine-monobiome-light.xpi  alpine-monobiome.xpi  badlands-monobiome-dark.xpi  badlands-monobiome-light.xpi  badlands-monobiome.xpi  chaparral-monobiome-dark.xpi  chaparral-monobiome-light.xpi  chaparral-monobiome.xpi  grassland-monobiome-dark.xpi  grassland-monobiome-light.xpi  grassland-monobiome.xpi  heathland-monobiome-dark.xpi  heathland-monobiome-light.xpi  heathland-monobiome.xpi  moorland-monobiome-dark.xpi  moorland-monobiome-light.xpi  moorland-monobiome.xpi  reef-monobiome-dark.xpi  reef-monobiome-light.xpi  reef-monobiome.xpi  savanna-monobiome-dark.xpi  savanna-monobiome-light.xpi  savanna-monobiome.xpi  tundra-monobiome-dark.xpi  tundra-monobiome-light.xpi  tundra-monobiome.xpi
app-config/fzf/: alpine-monobiome-dark.active.theme  alpine-monobiome-light.active.theme  badlands-monobiome-dark.active.theme  badlands-monobiome-light.active.theme  chaparral-monobiome-dark.active.theme  chaparral-monobiome-light.active.theme  default-alpine-monobiome-dark.active.theme  default-alpine-monobiome-light.active.theme  default-badlands-monobiome-dark.active.theme  default-badlands-monobiome-light.active.theme  default-chaparral-monobiome-dark.active.theme  default-chaparral-monobiome-light.active.theme  default-grassland-monobiome-dark.active.theme  default-grassland-monobiome-light.active.theme  default-savanna-monobiome-dark.active.theme  default-savanna-monobiome-light.active.theme  default-tundra-monobiome-dark.active.theme  default-tundra-monobiome-light.active.theme  grassland-monobiome-dark.active.theme  grassland-monobiome-light.active.theme  hard-alpine-monobiome-dark.active.theme  hard-alpine-monobiome-light.active.theme  hard-badlands-monobiome-dark.active.theme  hard-badlands-monobiome-light.active.theme  hard-chaparral-monobiome-dark.active.theme  hard-chaparral-monobiome-light.active.theme  hard-grassland-monobiome-dark.active.theme  hard-grassland-monobiome-light.active.theme  hard-savanna-monobiome-dark.active.theme  hard-savanna-monobiome-light.active.theme  hard-tundra-monobiome-dark.active.theme  hard-tundra-monobiome-light.active.theme  heathland-monobiome-dark.active.theme  heathland-monobiome-light.active.theme  monobiome-alpine-light-soft.active.theme  monobiome-dark.active.theme  monobiome-light.active.theme  moorland-monobiome-dark.active.theme  moorland-monobiome-light.active.theme  reef-monobiome-dark.active.theme  (+17 more)
app-config/ghostty/: alpine-monobiome-dark.config  alpine-monobiome-light.config  badlands-monobiome-dark.config  badlands-monobiome-light.config  chaparral-monobiome-dark.config  chaparral-monobiome-light.config  grassland-monobiome-dark.config  grassland-monobiome-light.config  heathland-monobiome-dark.config  heathland-monobiome-light.config  moorland-monobiome-dark.config  moorland-monobiome-light.config  reef-monobiome-dark.config  reef-monobiome-light.config  savanna-monobiome-dark.config  savanna-monobiome-light.config  tundra-monobiome-dark.config  (+1 more)
colors/: hex-palette.toml  monobiome.toml  oklch-palette.toml
examples/: class.py
monobiome/: __init__.py  __main__.py  constants.py  curve.py  curves.py  palette.py  plotting.py  scheme.py  schemes.py  util.py  writer.py
notebooks/: gamut_3d_plotly.py  monobiome_qbr-shapenorm-v130.ipynb  monobiome_qbr-shapenorm.ipynb  monobiome_qbr.ipynb  palette.ipynb
scripts/: generate.sh  plots.py  prepare.sh  render.sh  screens.sh
templates/: app_registry.toml
wiki/: DESIGN.md  THEMES.md
(+345 files in other folders)
