[project]
name = "monobiome"
version = "1.2.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "coloraide>=5.1",
    "ipython>=9.6.0",
    "kaleido>=1.1.0",
    "matplotlib>=3.10.7",
    "nbformat>=5.10.4",
    "numpy>=2.3.4",
    "pillow>=12.0.0",
    "plotly>=6.3.1",
    "scipy>=1.16.2",
]

[dependency-groups]
dev = [
    "ipykernel>=7.0.1",
]
