[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "monobiome"
version = "1.4.0"
description = "Monobiome color palette"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "coloraide>=5.1",
    "imageio[ffmpeg]>=2.37.2",
    "ipython>=9.6.0",
    "kaleido>=1.1.0",
    "matplotlib>=3.10.7",
    "nbformat>=5.10.4",
    "numpy>=2.3.4",
    "pillow>=12.0.0",
    "plotly>=6.3.1",
    "pyqt5>=5.15.11",
    "scipy>=1.16.2",
]

[dependency-groups]
dev = [
    "ipykernel>=7.0.1",
]

[project.scripts]
monobiome = "monobiome.__main__:main"

[project.urls]
Homepage = "https://doc.olog.io/monobiome"
Documentation = "https://doc.olog.io/monobiome"
Repository = "https://git.olog.io/olog/monobiome"
Issues = "https://git.olog.io/olog/monobiome/issues"

[tool.setuptools.packages.find]
include = ["monobiome*"]

[tool.setuptools.package-data]
"monobiome" = ["data/*.toml"]

[tool.ruff]
line-length = 79

[tool.ruff.lint]
select = ["ANN", "E", "F", "UP", "B", "SIM", "I", "C4", "PERF"]

[tool.ruff.lint.isort]
length-sort = true
order-by-type = false
force-sort-within-sections = false

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101"]
"**/__init__.py" = ["F401"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true

